progress bar added

--- a/app/src/main/res/layout/activity_searchable.xml
+++ b/app/src/main/res/layout/activity_searchable.xml
@@ -19,5 +19,12 @@
         android:id="@+id/emptyTextView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:indeterminate="true"
+        android:id="@+id/progressBar"/>
 
 </RelativeLayout>
